//
//  AccesibilityIdentifier.swift
//  Shop
//
//  Created by Juan Gestal Romani on 05/06/2019.
//  Copyright © 2019 Juan Gestal Romani. All rights reserved.
//

import Foundation

// For UI Tests
// There are other accesibility identifier in the outlet
// Can be defined also there...

class AccesibilityIdentifier {
    static let listViewController_BasketButton = "ListViewController_BasketButton"
}
