...
    func setupTableView() {
        tableView.allowsSelection = false
        tableView.register(BasketProductCell.nib, forCellReuseIdentifier: BasketProductCell.identifier)
    }

    @IBAction func proceedButtonTapped(_ sender: UIButton) {
        let alert = UIAlertController(title: "Order completed", message: "Thank for your order", preferredStyle: .alert)
        alert.addAction(UIAlertAction(title: "OK", style: .default, handler: { _ in
            self.viewModel?.confirmAndPay()
        }))
        self.present(alert, animated: true, completion:nil)
    }
}
...
