...
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="HyI-UI-FbX" secondAttribute="trailing" id="N47-ii-PeS"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="HyI-UI-FbX" secondAttribute="bottom" id="r64-lh-TiN"/>
                            <constraint firstItem="HyI-UI-FbX" firstAttribute="top" secondItem="NtI-dD-RNz" secondAttribute="bottom" constant="8" id="r8w-oA-hVq"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Products" id="s3Y-8a-lQ0"/>
                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                    <connections>
                        <outlet property="tableView" destination="HyI-UI-FbX" id="2Ev-xF-EE3"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
...
