...
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="92" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Eq3-cI-1eu">
                                <rect key="frame" x="0.0" y="44" width="414" height="621"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            </tableView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vZs-cQ-H2M" customClass="ProceedButton" customModule="Shop" customModuleProvider="target">
                                <rect key="frame" x="0.0" y="818" width="414" height="44"/>
                                <accessibility key="accessibilityConfiguration" identifier="BasketViewController_ProceedButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="TKC-Rf-0ad"/>
                                </constraints>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                <state key="normal" title="Complete Order"/>
                                <connections>
...
